--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@emotion/styled": "^11",
     "@hookstate/core": "^3.0.13",
     "appwrite": "^7.0.0",
+    "chakra-ui-markdown-renderer": "^4.0.0",
     "framer-motion": "^6",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-markdown": "^8.0.2",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
