--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "appwrite": "^7.0.0",
     "chakra-ui-markdown-renderer": "^4.0.0",
     "framer-motion": "^6",
+    "moment": "^2.29.3",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
     "react-markdown": "^8.0.2",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1"
